<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".layout.GuiFragment">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/BigTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_title"/>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_fio"/>

            <EditText
                style="style/EditStyle"
                android:id="@+id/et_fio"
                android:ems="16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_procedure"/>

            <EditText
                android:id="@+id/et_procedure"
                style="style/EditStyle"
                android:ems="16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_time_begin"/>

            <TextView
                style="@style/TextStyle"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_hour"/>

            <Spinner
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/sp_hour"
                android:entries="@array/hours_array">
            </Spinner>

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_min"/>

            <Spinner
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/sp_min"
                android:entries="@array/minute_array">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_time"/>

            <Spinner
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/sp_duration"
                android:entries="@array/duration_array">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_go"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
